--- a/app/index.html
+++ b/app/index.html
@@ -33,15 +33,16 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">amExHackathon</a>
+            <a class="navbar-brand" href="#/">Campus Recruitment Tool</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li><a href="#/">Home</a></li>
+              <li><a ng-href="#/screener/candidateForm">Screener</a></li>
+              <li><a ng-href="#/recruiter/recruiterForm">Recruiter</a></li>
+              <li><a ng-href="#/interviewer/interviewerForm">Interviewer</a></li>
             </ul>
           </div>
         </div>
