--- a/app/index.html
+++ b/app/index.html
@@ -82,6 +82,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/RecruiterForm.js"></script>
         <script src="scripts/controllers/candidateForm.js"></script>
         <!-- endbuild -->
 </body>
