--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,8 @@
         <script src="scripts/controllers/candidateForm.js"></script>
         <script src="scripts/controllers/interviewerForm.js"></script>
         <script src="scripts/controllers/recruiterForm.js"></script>
+        <script src="scripts/controllers/viewCandidate.js"></script>
+        <script src="scripts/controllers/viewCandidates.js"></script>
         <!-- endbuild -->
 </body>
 </html>
