--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
               <li><a ng-href="#/screener/candidateForm">Screener</a></li>
               <li><a ng-href="#/recruiter/recruiterForm">Recruiter</a></li>
               <li><a ng-href="#/interviewer/interviewerForm">Interviewer</a></li>
-              <li><a ng-href="#/interviewer/viewCandidates">Candidates</a></li>
+              <li><a ng-href="#/viewCandidates">Candidates</a></li>
             </ul>
           </div>
         </div>
