stylized scheduling inputs

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,8 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
+    <link rel="stylesheet" href="styles/jquery.ui.css" />
+    <link rel="stylesheet" href="styles/bootstrap.timepicker.min.css" />
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/calendar.css">
     <!-- endbuild -->
@@ -85,6 +87,8 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/angular-bootstrap-calendar/dist/js/angular-bootstrap-calendar-tpls.js"></script>
+    <script src="bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="bower_components/bootstrap-timepicker/js/bootstrap-timepicker.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
