--- a/test/index.html
+++ b/test/index.html
@@ -4,14 +4,20 @@
 <script src="fabric.js"></script>
 <script src="FileSaver.min.js"></script>
 <script src="canvas-toBlob.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
+
+
 
 </head>
 
 <body>
-<canvas id="c" width="800" height="600" id="c"></canvas>
-<input id="b" type="button" value="Save as Image"/>
+
+
+
+  <canvas style="left: -300px; border: 2px solid; " height="485" width="632" id="c"></canvas>
 <li style="margin-top:10px;">
           <button id="drawing-mode" class="btn btn-info">Enter drawing mode</button>
+          <button id="clear" class="btn btn-info">Clear</button>
           <div style="display: none;" id="drawing-mode-options">
             <label for="drawing-mode-selector">Mode:</label>
             <select id="drawing-mode-selector">
@@ -26,11 +32,13 @@
               <option>diamond</option>
               <option>texture</option>
             </select><br>
+            
             <label for="drawing-line-width">Line width:</label>
             <input type="range" value="30" min="0" max="150" id="drawing-line-width"><br>
             <label for="drawing-color">Line color:</label>
             <input type="color" value="#005E7A" id="drawing-color"><br>
             <label for="drawing-shadow-width">Line shadow width:</label>
+
             <input type="range" value="0" min="0" max="50" id="drawing-shadow-width"><br>
           </div>
         </li>
