--- a/app/index.html
+++ b/app/index.html
@@ -92,6 +92,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/RecruiterForm.js"></script>
         <script src="scripts/controllers/candidateForm.js"></script>
+        <script src="scripts/controllers/calendar.js"></script>
         <!-- endbuild -->
 </body>
 </html>
