--- a/app/index.html
+++ b/app/index.html
@@ -76,6 +76,7 @@
         <script src="scripts/controllers/candidateForm.js"></script>
         <script src="scripts/controllers/viewCandidate.js"></script>
         <script src="scripts/controllers/viewCandidates.js"></script>
+        <script src="scripts/services/candidate.js"></script>
         <!-- endbuild -->
 </body>
 </html>
