--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,7 @@
         <script src="scripts/controllers/viewCandidate.js"></script>
         <script src="scripts/controllers/viewCandidates.js"></script>
         <script src="scripts/services/candidate.js"></script>
+        <script src="scripts/directives/customonchange.js"></script>
         <!-- endbuild -->
 </body>
 </html>
