--- a/softtouch/index.html
+++ b/softtouch/index.html
@@ -8,50 +8,53 @@
 </head>
 <body>
 	<div class="container">
-		<div class="row" id="options" >
+		<div class="row" style="position: fixed; z-index: 2" id="options" >
 			<div class="btn-group" role="group" aria-label="...">
-			  	<button type="button" class="btn btn-default">
+			  	<button value="black" type="button" class="btn btn-default color-button active">
 			  		<span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
 			  	</button>
-			  	<button type="button" class="btn btn-default">
+			  	<button value="red" type="button" class="btn btn-default color-button">
 			  		<span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
 			  	</button>
-			  	<button type="button" class="btn btn-default">
+			  	<button value="blue" type="button" class="btn btn-default color-button">
 			  		<span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
 			  	</button>
-			  	<button type="button" class="btn btn-default">
+			  	<button value="yellow" type="button" class="btn btn-default color-button">
+			  		<span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
+			  	</button>
+			  	<button value="green" type="button" class="btn btn-default color-button">
 			  		<span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
 			  	</button>
 			</div>
 			<div class="btn-group" role="group" aria-label="...">
-			  	<button type="button" class="btn btn-default">
+			  	<button id="pen" type="button" class="btn btn-default tool-button active">
 			  		<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 			  	</button>
-			  	<button type="button" class="btn btn-default">
+			  	<button id="marker" type="button" class="btn btn-default tool-button">
 			  		<span class="glyphicon glyphicon-erase" aria-hidden="true"></span>
 			  	</button>
 			</div>
 			<div class="btn-group" role="group" aria-label="...">
-			  	<button type="button" class="btn btn-default">
+			  	<button value="minus" type="button" class="btn btn-default thinknessChanger">
 			  		<span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
 			  	</button>
-			  	<button type="button" class="btn btn-default">
-			  		<span class="glyphicon glyphicon-sound-5-1" aria-hidden="true"></span>
+			  	<button type="button" class="btn btn-default" >
+			  		<span id="thickness" class="glyphicon" aria-hidden="true" style="font-weight: bold">1</span>
 			  	</button>
-			  	<button type="button" class="btn btn-default">
+			  	<button value="plus" type="button" class="btn btn-default thinknessChanger">
 			  		<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 			  	</button>
 			</div>
 			<div class="btn-group" role="group" aria-label="...">
-			  	<button type="button" class="btn btn-default">
-			  		<span class="glyphicon glyphicon glyphicon-share-alt icon-flip" aria-hidden="true"></span>
+			  	<button id="undo" type="button" class="btn btn-default">
+			  		<span class="glyphicon glyphicon glyphicon-share-alt icon-flip " aria-hidden="true"></span>
 			  	</button>
-			  	<button type="button" class="btn btn-default">
-			  		<span class="glyphicon glyphicon glyphicon-share-alt" aria-hidden="true"></span>
+			  	<button id="redo" type="button" class="btn btn-default">
+			  		<span class="glyphicon glyphicon glyphicon-share-alt " aria-hidden="true"></span>
 			  	</button>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row" style="margin-top: 50px">
 			<canvas class="" id="c" height="995" width="775" style="border: 1px solid black"></canvas>
 		</div>
 	</div>
@@ -65,6 +68,7 @@
 		}	
 	</style>
 	<script src="fabric.js"></script>
+	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 	<script src="controller.js"> </script>
 </body>
 
