Softpen working, still needs a way to load and save picture through angular

--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/fabric.js/dist/fabric.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -88,6 +89,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/softpen.js"></script>
         <!-- endbuild -->
 </body>
 </html>
