--- a/softtouch/index.html
+++ b/softtouch/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="container">
-		<div class="row tools-bar" " id="options" >
+		<div class="row tools-bar" id="options" >
 			<div class="btn-group" role="group" aria-label="...">
 			  	<button value="black" type="button" class="btn btn-default color-button active">
 			  		<span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
