Added livereload tag

--- a/app/index.html
+++ b/app/index.html
@@ -90,5 +90,9 @@
         <script src="scripts/controllers/calendar.js"></script>
         <script src="scripts/directives/customonchange.js"></script>
         <!-- endbuild -->
+
+    <!-- TODO: remove this livereload link for builds somehow -->
+    <script src="//localhost:35729/livereload.js"></script>
+
 </body>
 </html>
