injected interview service

--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,7 @@
         <script src="scripts/controllers/viewCandidates.js"></script>
         <script src="scripts/controllers/sidebar.js"></script>
         <script src="scripts/services/candidate.js"></script>
+        <script src="scripts/services/interview.js"></script>
         <script src="scripts/controllers/recruiterHome.js"></script>
         <script src="scripts/controllers/candidateForm.js"></script>
         <script src="scripts/controllers/calendar.js"></script>
