--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/softpen.js"></script>
+        <script src="scripts/services/softpenimage.js"></script>
         <!-- endbuild -->
 </body>
 </html>
