--- a/app/index.html
+++ b/app/index.html
@@ -86,6 +86,7 @@
         <script src="scripts/controllers/viewCandidates.js"></script>
         <script src="scripts/controllers/sidebar.js"></script>
         <script src="scripts/services/candidate.js"></script>
+        <script src="scripts/services/interviewQuestions.js"></script>
         <script src="scripts/controllers/recruiterHome.js"></script>
         <script src="scripts/controllers/candidateForm.js"></script>
         <script src="scripts/controllers/calendar.js"></script>
