Refactored softpen code into css, js, html, etc.

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/sidebar.css">
     <link rel="stylesheet" href="styles/calendar.css">
+    <link rel="stylesheet" href="styles/softpen.css">
     <!-- endbuild -->
   </head>
   <body ng-app="amExHackathonApp">
