Changed "Screener" in menu to go to softpen
Also made form submit redirect to softpen canvas after submitting a
candidate. Changed route of softpen to '/screener/softpen'.

--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
 
             <ul class="nav navbar-nav">
               <li><a href="#/">Home</a></li>
-              <li><a ng-href="#/screener/candidateForm">Screener</a></li>
+              <li><a ng-href="#/screener/softpen">Screener</a></li>
               <li><a ng-href="#/recruiter/recruiterHome">Recruiter</a></li>
               <li><a ng-href="#/interviewer/interviewerForm">Interviewer</a></li>
               <li><a ng-href="#/viewCandidates">Candidates</a></li>
