--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,7 @@
         <script src="scripts/services/question.js"></script>
         <script src="scripts/services/interviewQuestions.js"></script>
         <script src="scripts/services/interview.js"></script>
+        <script src="scripts/services/archive.js"></script>
         <script src="scripts/controllers/recruiterHome.js"></script>
         <script src="scripts/controllers/candidateForm.js"></script>
         <script src="scripts/controllers/calendar.js"></script>
