2 new views Admin options and ManageForms

--- a/app/index.html
+++ b/app/index.html
@@ -89,6 +89,7 @@
         <script src="scripts/controllers/candidateForm.js"></script>
         <script src="scripts/controllers/calendar.js"></script>
         <script src="scripts/controllers/adminOps.js"></script>
+        <script src="scripts/controllers/adminOpsForms.js"></script>
         <!-- endbuild -->
 </body>
 </html>
