added image orientation stuff

--- a/app/index.html
+++ b/app/index.html
@@ -93,6 +93,7 @@
         <script src="scripts/controllers/candidateForm.js"></script>
         <script src="scripts/controllers/calendar.js"></script>
         <script src="scripts/directives/customonchange.js"></script>
+        <script src="scripts/load-image.all.min.js"></script>
 
           <!-- leave this here, livereload will be removed during a real build -->
         <script src="//localhost:35729/livereload.js"></script>
