--- a/app/index.html
+++ b/app/index.html
@@ -94,6 +94,7 @@
         <script src="scripts/controllers/recruiterHome.js"></script>
         <script src="scripts/controllers/candidateInput.js"></script>
         <script src="scripts/controllers/candidateForm.js"></script>
+        <script src="scripts/controllers/screenerSplash.js"></script>
         <script src="scripts/directives/customonchange.js"></script>
 
           <!-- leave this here, livereload will be removed during a real build -->
