added canvas for puzzle

--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/softpen.js"></script>
         <script src="scripts/services/softpenimage.js"></script>
+        <script src="scripts/services/puzzleImage.js"></script>
         <script src="scripts/controllers/viewCandidate.js"></script>
         <script src="scripts/controllers/viewCandidates.js"></script>
         <script src="scripts/controllers/sidebar.js"></script>
@@ -95,6 +96,7 @@
         <script src="scripts/controllers/candidateInput.js"></script>
         <script src="scripts/controllers/candidateForm.js"></script>
         <script src="scripts/controllers/screenerSplash.js"></script>
+        <script src="scripts/controllers/puzzleCanvas.js"></script>
         <script src="scripts/directives/customonchange.js"></script>
 
           <!-- leave this here, livereload will be removed during a real build -->
