--- a/app/index.html
+++ b/app/index.html
@@ -93,6 +93,7 @@
         <script src="scripts/controllers/recruiterHome.js"></script>
         <script src="scripts/controllers/candidateForm.js"></script>
         <script src="scripts/controllers/calendar.js"></script>
+        <script src="scripts/controllers/interviewerTable.js"></script>
         <script src="scripts/directives/customonchange.js"></script>
 
           <!-- leave this here, livereload will be removed during a real build -->
