Setting up and designing flow for interview page

--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,8 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/interviews.js"></script>
+        <script src="scripts/controllers/interviewCandidate.js"></script>
+        <script src="scripts/controllers/messagesServices.js"></script>
         <script src="scripts/controllers/interviewerForm.js"></script>
         <script src="scripts/controllers/softpen.js"></script>
         <script src="scripts/services/softpenimage.js"></script>
